Updating and fixing issues w website since name change on github

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -6,7 +6,7 @@ project:
 
 website:
   title: "Bhabilsh Limbu"
-  favicon: assets/logo.png
+  favicon: assets/icon.png
   
   navbar:
     background: primary 
